--- a/config.toml
+++ b/config.toml
@@ -9,6 +9,7 @@ googleAnalytics = "UA-60001962-9"
   description = "A resource for all game development related things in SOMETHING."
   twitter = "https://twitter.com/GameDevFYI"
   email = "admin@gamedev.fyi"
+  source_code = "https://gitlab.com/gamedev-fyi/gamedev-fyi-base"
   keywords = "Game, GameDev, SOMETHING"
   dateFormat = "January 2, 2006"
   author = "Goose Ninja"
